fix: make loudspeaker line in phone frame visible

--- a/pages/app.module.css
+++ b/pages/app.module.css
@@ -14,13 +14,12 @@
 	border-radius: 36px;
 }
 
-.phone:before {
-	content: "";
+.loudspeakerLine {
 	display: block;
 	width: 60px;
 	height: 5px;
 	position: absolute;
-	top: -30px;
+	top: 30px;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background: #333;
